@@ -729,7 +729,7 @@ function &xml_to_data_input_method($hash, &$xml_array, &$hash_cache) {
 
 	/* update field use counter cache if possible */
 	if ((isset($xml_array["input_string"])) && (!empty($data_input_id))) {
-		generate_data_input_field_sequences($xml_array["input_string"], $data_input_id, "in");
+		generate_data_input_field_sequences($xml_array["input_string"], $data_input_id);
 	}
 
 	/* status information that will be presented to the user */
